# NickAvelli

./: .gitignore  Dockerfile  README.md  pyproject.toml  reaper_destruction.py
config/: casa.yaml  constraints.yaml  hostile_refs.yaml  prompt_library.yaml
scripts/: weekly_hostile.py
src/casa/: __init__.py
src/casa/analysis/: __init__.py  clave.py  metadata.py  structure.py
src/casa/api/: __init__.py  routes.py
src/casa/data/: __init__.py  augmentation.py  dataset.py
src/casa/generation/: __init__.py  engine.py  vocals.py
src/casa/mastering/: __init__.py  processor.py
src/casa/utils/: __init__.py  config.py  logging.py
src/curation/: gatekeeper.py  uncertainty_sampling.py
src/curation/config/: constraints.yaml
src/curation/config/scripts/: daily_gatekeeper.py
src/destruction/: chain_engine.py
src/training/: hostile_reference.py
tests/: test_api.py  test_clave.py  test_config.py  test_data_pipeline.py  test_generation.py  test_mastering.py
